<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Settings</string>
    <string name="action_back">Action Back</string>
    <string name="action_help">Help</string>
    <string name="title_activity_five_s">Five S Checklist</string>
    <string name="app_logo">App Logo</string>
    <string name="blank">blank</string>
    <string name="title_activity_time_study">TimeStudyActivity</string>
    <string name="title_activity_sixsigma">sixsigma</string>
    <string name="cb1">CheckBox1</string>

</resources>
