<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">


    <item android:id="@+id/search"
        android:title="@string/action_search"
        android:orderInCategory="200"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always"/>

    <item android:id="@+id/applogo"
        android:title="@string/app_logo"
        android:orderInCategory="200"
        android:icon="@drawable/app_logo"
        app:showAsAction="always"/>

    <item android:id="@+id/settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/help"
        android:title="@string/action_help"
        android:orderInCategory="100"
        app:showAsAction="never" />


</menu>
